--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,17 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+
+header {
+    position: absolute;
+    z-index: 10;
+    top: 40px;
+    left: 45%;
+}
+
 .banner-container {
+  position: relative;
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -6,6 +19,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  
 }
 
 .banner-title {
