--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,9 +7,12 @@ header {
     position: absolute;
     z-index: 10;
     top: 40px;
-    left: 45%;
+    left: 42%;
 }
 
+nav button{
+  font-size: 20px;
+}
 .banner-container {
   position: relative;
   height: 100vh;
